fix z-index

--- a/src/components/custom-gallery/custom-gallery.css
+++ b/src/components/custom-gallery/custom-gallery.css
@@ -100,7 +100,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 99999999999;
+  z-index: 99999;
 }
 .img__fulscreen {
   z-index: 1;
